--- a/css/main.css
+++ b/css/main.css
@@ -85,12 +85,24 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
   }
   
+
+  main {
+    /* position: relative; */
+  }
+
   .userCard {
     max-width: 940px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
     background-color: #ffffff;
+
+    position: relative;
+    margin-top:-340px;
+    /* 相对原位置偏移时用 相对定位/负边距 */
+    /* right:50% ; */
+    /* transform: translate(-10%,0); */
   }
+
   .userCard .welcome {
     background: #e6686a;
     color: white;
@@ -169,3 +181,72 @@ body {
     fill: currentColor;
     overflow: hidden;
  }
+
+  .button{
+    display: block;
+    margin: 30px auto;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    width: 200px;
+    height: 40px; 
+    border: 1px solid gray;
+    box-shadow: #9a9da2;
+    text-align: center;
+    line-height: 40px;
+    
+ }
+
+  main p{
+    text-align: center;
+
+  }
+
+
+  .skills{
+    max-width: 940px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+ .skills h1{
+   text-align: center;
+   color: #3d4451;
+   font-size: 34px;
+   line-height: 1.2;
+   font-weight: 600;
+ }
+
+ .skills ul{
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+  list-style: none;
+  background: white;
+  padding: 42px 50px 10px;
+  margin-top: 30px;
+ }
+
+ .skills ul li{
+  box-sizing: border-box;
+  width: 45%;
+ }
+
+ .skills ul li:nth-child(even){
+  float: left;
+ }
+
+ .skills ul li:nth-child(odd){
+   float: right;
+ }
+
+ section.skills .progressBar {
+  height: 5px;
+  background: #FAE1E1;
+  border-radius: 2px;
+  margin: 4px 0 40px;
+}
+
+ section.skills .progressBar > .progress {
+  height: 100%;
+  background: #E6686A;
+  border-radius: 2px;
+}
